2009-11-04  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Need to implement ARIA role="combobox"
        https://bugs.webkit.org/show_bug.cgi?id=31096

        * accessibility/aria-combobox.html: Added.
        * platform/gtk/Skipped:
        * platform/mac/accessibility/aria-combobox-expected.txt: Added.
        * platform/win/Skipped:

2009-11-04  Csaba Osztrogonác  <ossy@webkit.org>

        Put test into skiplist added in r50489 because
        layoutTestController.showWebInspector() is unimplemented now.

        * platform/qt/Skipped: inspector/timeline-trivial.html added.

2009-11-04  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed rollout.

        Revert r50496 because it broke all layout tests on QtBuildBot.

        * svg/text/resources: Removed.
        * svg/text/resources/text-font-invalid.svg: Removed.
        * svg/text/text-font-invalid-expected.txt: Removed.
        * svg/text/text-font-invalid.html: Removed.

2009-11-03  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Mark Rowe.
        (on IRC)

        add ruby layout tests to the Skipped list on mac, since they somehow cause
        http/tests/security/mixedContent/about-blank-iframe-in-main-frame.html to fail.
        
        no new tests.

        * platform/mac/Skipped:

2009-11-02  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Simon Hausmann.

        Add a new test to reproduce 29856. The bug only happen
        when the SVG file is used as an image.
        https://bugs.webkit.org/show_bug.cgi?id=29856

        * svg/text/text-font-invalid-expected.txt: Added.
        * svg/text/resources/text-font-invalid.svg: Added.
        * svg/text/text-font-invalid.html: Added.

2009-11-04  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Dave Hyatt.

        Bug 28420 -  Implement HTML5 <ruby> rendering
        (https://bugs.webkit.org/show_bug.cgi?id=28420)
