@@ -1,3 +1,14 @@
+2009-11-04  Daniel Bates  <dbates@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        https://bugs.webkit.org/show_bug.cgi?id=30266
+        
+        Changed data format type from "text" to "text/plain" to pass Chrome tests.
+
+        * fast/events/drag-and-drop-dataTransfer-types-nocrash-expected.txt:
+        * fast/events/drag-and-drop-dataTransfer-types-nocrash.html:
+
 2009-11-04  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Beth Dakin.
